--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_articlegroup.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_articlegroup.xlf
@@ -16,7 +16,7 @@
 				<source>l10nParent</source>
 			</trans-unit>
 			<trans-unit id="component.description">
-				<source>component</source>
+				<source>product</source>
 			</trans-unit>
 			<trans-unit id="articles.description">
 				<source>articles</source>
