--- a/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_applicationprocess.xlf
+++ b/Resources/Private/Language/locallang_csh_tx_melosrtb_domain_model_applicationprocess.xlf
@@ -3,11 +3,14 @@
 	<file source-language="en" datatype="plaintext" original="messages" date="2015-02-16T11:01:08Z" product-name="melos_rtb">
 		<header/>
 		<body>
-			<trans-unit id="mlang_tabs_tab">
-				<source>Import</source>
+			<trans-unit id="name.description">
+				<source>name</source>
 			</trans-unit>
-			<trans-unit id="mlang_labels_tabdescr">
-				<source>Ready to Build - Import</source>
+			<trans-unit id="icon.description">
+				<source>icon</source>
+			</trans-unit>
+			<trans-unit id="image.description">
+				<source>image</source>
 			</trans-unit>
 		</body>
 	</file>
